--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
 defcon==0.6.0
-ecdsa==0.13
+ecdsa>=0.13.3
 esptool==2.5.1
 fonttools==4.0.0
 fs==2.4.11
@@ -14,7 +14,7 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 numpy==1.17.2
 pandas==0.25.1
-Pillow==6.0.0
+pillow>=6.2.0
 pipenv==2018.11.26
 pyaes==1.6.1
 pylint==2.3.1
@@ -30,7 +30,7 @@ tqdm==4.35.0
 typed-ast==1.3.5
 uflash==1.2.4
 unicodedata2==12.0.0
-urllib3==1.24.1
+urllib3>=1.24.2
 virtualenv==16.0.0
 virtualenv-clone==0.5.3
 wikipedia==1.4.0
