--- a/requirements-tested.txt
+++ b/requirements-tested.txt
@@ -3,6 +3,7 @@ astroid==2.2.5
 beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
+charset-normalizer==2.0.10
 defcon==0.6.0
 ecdsa==0.14.1
 esptool==2.5.1
@@ -15,7 +16,7 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 numpy==1.17.2
 pandas==0.25.1
-Pillow==8.3.2
+Pillow==9.0.0
 pyaes==1.6.1
 pylint==2.3.1
 pyparsing==2.4.5
@@ -24,16 +25,16 @@ python-dateutil==2.8.0
 python-Levenshtein==0.12.0
 pytz==2018.4
 pyudev==0.21.0
-requests==2.22.0
+requests==2.27.1
 rshell==0.0.16
 six==1.12.0
 soupsieve==1.8
 svgwrite==1.3.1
 tqdm==4.35.0
-typed-ast==1.3.5
+typed-ast==1.5.1
 uflash==1.2.4
 unicodedata2==12.0.0
-urllib3>=1.26.5
+urllib3==1.26.8
 virtualenv==16.0.0
 virtualenv-clone==0.5.3
 wikipedia==1.4.0
