--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fs==2.4.16
 fuzzywuzzy==0.18.0
 pandas==1.3.5
 pip-chill==1.0.3
+python-slugify==8.0.4
 svgwrite==1.4.1
 tqdm==4.62.3
 unicodedata2==15.1.0
